improv: indicator range added to api and database
