# cmd/internal/models/project.go
@@ -7,12 +7,11 @@ import (
 )
 
 type Project struct {
-	ID          uuid.UUID         `json:"id"`
-	Name        string            `json:"name"`
-	Description string            `json:"description"`
-	Members     []User            `json:"members"`
-	Color       string            `json:"color"`
-	ProdRange   ProductivityRange `json:"prod_range"`
-	CreatedAt   time.Time         `json:"created_at"`
-	UpdatedAt   time.Time         `json:"updated_at"`
+	ID          uuid.UUID `json:"id"`
+	Name        string    `json:"name"`
+	Description string    `json:"description"`
+	Members     []User    `json:"members"`
+	Color       string    `json:"color"`
+	CreatedAt   time.Time `json:"created_at"`
+	UpdatedAt   time.Time `json:"updated_at"`
 }
